--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^5.20.6",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
